Oops! Big commit here, I had forgotten to add the contents of the app folders for bikemileage and books.

--- a/books/templates/books/book_list.html
+++ b/books/templates/books/book_list.html
@@ -1,4 +1,4 @@
-{% extends 'books_base.html' %}
+{% extends 'books/books_base.html' %}
 
 {% load static %}
 
@@ -33,7 +33,7 @@
     </tr>
   </thead>
   <tbody>
-    {% include 'includes/partial_book_list.html' %}
+    {% include 'books/includes/partial_book_list.html' %}
   </tbody>
 </table>
 
