--- a/books/templates/books/books_base.html
+++ b/books/templates/books/books_base.html
@@ -12,7 +12,7 @@
     <![endif]-->
   </head>
   <body>
-    {% include 'includes/header.html' %}
+    {% include 'books/includes/header.html' %}
     <div class="container">
       {% block content %}
       {% endblock %}
