--- a/bikemileage/templates/bikemileage/bicycle_list.html
+++ b/bikemileage/templates/bikemileage/bicycle_list.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1 class="page-header">Books</h1>
+  <h1 class="page-header">Bicycles</h1>
       <p>
       <a href="{% url 'bicycle_create' %}">
         <button type="button" class="btn btn-primary create-bicycle">
