--- a/templates/topic_posts.html
+++ b/templates/topic_posts.html
@@ -4,6 +4,17 @@
 
 {% block title %}{{ topic.subject }}{% endblock %}
 
+{% block stylesheet %}
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
+{% endblock %}
+
+{% block javascript %}
+  <script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+  <script>
+    var simplemde = new SimpleMDE();
+  </script>
+{% endblock %}
+
 {% block breadcrumb %}
   <li class="breadcrumb-item"><a href="{% url 'home' %}">Boards</a></li>
   <li class="breadcrumb-item"><a href="{% url 'board_topics' topic.board.pk %}">{{ topic.board.name }}</a></li>
@@ -16,8 +27,8 @@
     <a href="{% url 'reply_topic' topic.board.pk topic.pk %}" class="btn btn-primary" role="button">Reply</a>
   </div>
 
-  {% for post in topic.posts.all %}
-    <div class="card mb-2 {% if forloop.first %}border-dark{% endif %}">
+  {% for post in posts %}
+      <div id="{{ post.pk }}" class="card {% if forloop.last %}mb-4{% else %}mb-2{% endif %} {% if forloop.first %}border-dark{% endif %}">
       {% if forloop.first %}
         <div class="card-header text-white bg-dark py-2 px-3">{{ topic.subject }}</div>
       {% endif %}
@@ -36,10 +47,12 @@
                 <small class="text-muted">{{ post.created_at }}</small>
               </div>
             </div>
-            {{ post.message }}
+            {{ post.get_message_as_markdown }}
             {% if post.created_by == user %}
               <div class="mt-3">
-                <a href="#" class="btn btn-primary btn-sm" role="button">Edit</a>
+                <a href="{% url 'edit_post' post.topic.board.pk post.topic.pk post.pk %}"
+                   class="btn btn-primary btn-sm"
+                   role="button">Edit</a>
               </div>
             {% endif %}
           </div>
@@ -47,5 +60,6 @@
       </div>
     </div>
   {% endfor %}
-
+    {% include 'includes/pagination.html' %}
+    
 {% endblock %}
