forcing login for bikemileage and limiting view results to user; cleaning up template a bit

--- a/bikemileage/templates/bikemileage/bootstrap4_template.html
+++ b/bikemileage/templates/bikemileage/bootstrap4_template.html
@@ -4,10 +4,7 @@
 
         {% block content %}
 
-        <a href="https://getbootstrap.com/docs/4.0/content/tables/">Bootstrap 4 - tables docs</a> |
-        <a href="https://getbootstrap.com/docs/4.0/components/pagination/">Bootstrap 4 - pagination docs</a>
-
-        <h3>django_tables2 with <a href="https://getbootstrap.com/docs/4.0/">Bootstrap 4</a> template example</h3>
+        <h3>Mileage display for {{ user.username }}</h3>
 
           <p>
             <a href="{% url 'mileage_create' %}"
