--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -1,10 +1,31 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
+
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Upload</button>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.locname|as_crispy_field }}
+      </div>
+    </div>
+    {{ form.description|as_crispy_field }}
+    <div class="form-row">
+      <div class="form-group col-md-2 mb-0">
+        {{ form.latitude|as_crispy_field }}
+      </div>
+      <div class="form-group col-md-2 mb-0">
+        {{ form.longitude|as_crispy_field }}
+      </div>
+    </div>
+    <div class="form-row">
+      <div class="form-group col-md-6 mb-0">
+        {{ form.image|as_crispy_field }}
+      </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Upload</button>
   </form>
 
   <p><a href="{% url 'home' %}">Return to home</a></p>
