added in leaflet map, but have not integrated at all with form; also did a sloppy job by adding leaflet ref to global base template.

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% load leaflet_tags %}
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,6 +9,10 @@
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+
+    {% leaflet_js %}
+    {% leaflet_css %}
+    
     {% block stylesheet %}{% endblock %}
   </head>
   <body>
