--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -37,7 +37,7 @@
         {{ form.latitude|as_crispy_field }}
       </div>
       <div class="form-group col-md-2 mb-0">
-        {{ form.longitude|as_crispy_field }}
+        {{ form.collectionpoint }}
       </div>   
     </div>
     <div class="form-row">
