Tweaks, the proof of concept is approved

--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -1,50 +1,38 @@
 {% extends 'base.html' %}
 
+
+  
 {% load crispy_forms_tags %}
-{% load leaflet_tags %}
 
 {% block content %}
+<head>
+    {{ form.media }}
+</head>
 
-{% leaflet_map "mymap" %}
-<style>
-
-    .leaflet-container {  /* all maps */
-        width:  600px;
-        height: 400px;
-    }
-
-    #specialbigmap {
-        height: 800px;
-    }
-
-    /* Resize the "display_raw" textbox */
-    .django-leaflet-raw-textarea {
-        width: 100%;
-    }
-
-</style>
 
   <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="form-row">
-      <div class="form-group col-md-6 mb-0">
+      <div class="form-group col-md-4 mb-0">
         {{ form.locname|as_crispy_field }}
       </div>
     </div>
-    {{ form.description|as_crispy_field }}
     <div class="form-row">
-      <div class="form-group col-md-2 mb-0">
-        {{ form.latitude|as_crispy_field }}
+      <div class="form-group col-md-4 mb-0">    
+    {{ form.description|as_crispy_field }}
       </div>
-      <div class="form-group col-md-2 mb-0">
+    </div>    
+    <div class="form-row">
+      <div class="form-group col-md-4 mb-0">
+        {{ form.image|as_crispy_field }}
+      </div>
+    </div>    
+      <div class="form-row">
+      <div class="form-group col-md-4 mb-0">
         {{ form.collectionpoint }}
       </div>   
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-6 mb-0">
-        {{ form.image|as_crispy_field }}
-      </div>
-    </div>
+
     <button type="submit" class="btn btn-primary">Upload</button>
   </form>
 
