--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -1,6 +1,6 @@
-{% extends 'base.html' %}
+{% extends 'kanopy/base_kanopy.html' %}
 
-
+{% block title %}Welcome to Green CovR{% endblock %}
   
 {% load crispy_forms_tags %}
 
@@ -10,33 +10,44 @@
 </head>
 
 
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <div class="form-row">
-      <div class="form-group col-md-4 mb-0">
-        {{ form.locname|as_crispy_field }}
+  <div class="row justify-content-center">
+    <div class="col-lg-8 col-md-10 col-sm-12">
+      <div class="card">
+        <div class="card-body">
+          <h3 class="card-title">Upload a photo</h3>
+            <p>
+            Please upload your photo and fill in the requested information about your photo and your site.
+            </p>
+            <form method="post" enctype="multipart/form-data">
+                {% csrf_token %}
+                <div class="form-row">
+                    <div class="form-group col-md-4 mb-0">
+                        {{ form.locname|as_crispy_field }}
+                    </div>
+                </div>
+                <div class="form-row">
+                    <div class="form-group col-md-4 mb-0">    
+                        {{ form.description|as_crispy_field }}
+                    </div>
+                </div>    
+                <div class="form-row">
+                    <div class="form-group col-md-4 mb-0">
+                        {{ form.image|as_crispy_field }}
+                    </div>
+                </div>    
+                <div class="form-row">
+                    <div class="form-group col-md-4 mb-0">
+                        {{ form.collectionpoint }}
+                    </div>   
+                </div>
+
+                <button type="submit" class="btn btn-primary">Upload</button>
+            </form>
+        </div>
+        <div class="card-footer text-muted text-center">
+          Questions? See our references <a href="#">page</a>
+        </div>
       </div>
     </div>
-    <div class="form-row">
-      <div class="form-group col-md-4 mb-0">    
-    {{ form.description|as_crispy_field }}
-      </div>
-    </div>    
-    <div class="form-row">
-      <div class="form-group col-md-4 mb-0">
-        {{ form.image|as_crispy_field }}
-      </div>
-    </div>    
-      <div class="form-row">
-      <div class="form-group col-md-4 mb-0">
-        {{ form.collectionpoint }}
-      </div>   
-    </div>
-
-    <button type="submit" class="btn btn-primary">Upload</button>
-  </form>
-
-  <p><a href="{% url 'home' %}">Return to home</a></p>
-  
-      
+  </div>
 {% endblock %}
