--- a/bikemileage/templates/bikemileage/mileage_form.html
+++ b/bikemileage/templates/bikemileage/mileage_form.html
@@ -1,12 +1,39 @@
 {% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
+{% load crispy_forms_filters static %}
+
+
+{% block javascript %}
+  <!-- Fengyuan Chen's Datepicker -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
+
+{% endblock %}
 
 {% block content %}
+
+
+
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
     <button type="submit" class="btn btn-success">Save ride</button>
     <a href="{% url 'custom_mileage' %}" <button class="btn btn-danger">Cancel</button> </a>
+
+    <script>
+    $(function () {
+      $("#id_ride_date").datepicker({
+      format:'yyyy-mm-dd',
+    });
+    });
+  </script>
+  
+
   </form>
+
+  
+
+  
 {% endblock %}
+
