--- a/bikemileage/templates/bikemileage/mileage_update_form.html
+++ b/bikemileage/templates/bikemileage/mileage_update_form.html
@@ -2,6 +2,23 @@
 
 {% load crispy_forms_tags %}
 
+
+{% block javascript %}
+  <!-- Fengyuan Chen's Datepicker -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.css" integrity="sha256-b88RdwbRJEzRx95nCuuva+hO5ExvXXnpX+78h8DjyOE=" crossorigin="anonymous" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/datepicker/0.6.5/datepicker.min.js" integrity="sha256-/7FLTdzP6CfC1VBAj/rsp3Rinuuu9leMRGd354hvk0k=" crossorigin="anonymous"></script>
+
+{% endblock %}
+
 {% block content %}
   {% crispy form %}
+  
+     <script>
+    $(function () {
+      $("#id_ride_date").datepicker({
+      format:'yyyy-mm-dd',
+    });
+    });
+  </script>
+  
 {% endblock %}
