--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,8 @@
 {% load static %}
+
+  <!-- XDSoft DateTimePicker -->
+
+
 <!DOCTYPE html>
 <html>
   <head>
@@ -7,6 +11,8 @@
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+
     {% block stylesheet %}{% endblock %}
   </head>
   <body>
@@ -50,9 +56,10 @@
         {% endblock %}
       </div>
     {% endblock body %}
-    <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
+
     <script src="{% static 'js/popper.min.js' %}"></script>
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>    
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>     
+
     <!-- This block intentionally left blank for use in other templates-->
     {% block javascript %}{% endblock %}
   </body>
