--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,11 @@
 {% load static %}
 
-  <!-- XDSoft DateTimePicker -->
-
 
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>{% block title %}Django Boards{% endblock %}</title>
+    <title>{% block title %}DaveMike{% endblock %}</title>
     <link href="https://fonts.googleapis.com/css?family=Peralta" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
@@ -19,11 +17,16 @@
     {% block body %}
       <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <div class="container">
-        <a class="navbar-brand" href="{% url 'home' %}">Django Boards</a>
+        <a class="navbar-brand" href="{% url 'home' %}">DaveMike</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="mainMenu">
+             <!-- <ul class="nav navbar-nav"> -->
+              <!-- <li><a href="{% url 'custom_mileage' %}" >Mileage</a></li> -->
+              <!-- <li><a href="{% url 'book_list' %}" >Add Book</a></li> -->
+              <!-- <li><a href="#" >Kanopy</a></li> -->
+             <!-- </ul> -->
           {% if user.is_authenticated %}
           <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown">
