--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -58,17 +58,20 @@
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-4 mb-0">    
+                        {{ form.cover_crop_species_1|as_crispy_field }}
+                    </div>
+                    <div class="form-group col-md-4 mb-0">
+                        {{ form.seeding_method|as_crispy_field }}
+                    </div>                    
+                </div>                
+                <div class="form-row">
+                    <div class="form-group col-md-4 mb-0">    
                         {{ form.cover_crop_planting_date|as_crispy_field }}
                     </div>
                     <div class="form-group col-md-4 mb-0">    
                         {{ form.cover_crop_planting_rate|as_crispy_field }}
                     </div>
                 </div>    
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">    
-                        {{ form.cover_crop_species_1|as_crispy_field }}
-                    </div>
-                </div>
                 <div class="form-row">
                     <div class="form-group col-md-4 mb-0">    
                         {{ form.cover_crop_species_2|as_crispy_field }}
@@ -82,14 +85,10 @@
                 </div>                    
                 <div class="form-row">
                     <div class="form-group col-md-4 mb-0">
+                        {{ form.cover_crop_termination_date|as_crispy_field }}                        
+                    </div>                    
+                    <div class="form-group col-md-4 mb-0">
                         {{ form.crop_prior|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.seeding_method|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.cover_crop_termination_date|as_crispy_field }}
-                        
                     </div>                    
                 </div>    
                 
@@ -112,6 +111,11 @@
                         {{ form.collectionpoint }}
                     </div>
                 </div>
+                <div class="form-row">
+                    <div class="form-group col-md-4 mb-0">
+                        {{ form.contact_email|as_crispy_field }}
+                    </div>
+                </div>                
                 <div class="form-row">
                     <div class="form-group col-md-8 mb-0">
                         {{ form.comments|as_crispy_field }}
