--- a/kanopy/templates/kanopy/base_kanopy.html
+++ b/kanopy/templates/kanopy/base_kanopy.html
@@ -9,8 +9,12 @@
 {% block body %}
   <div class="container">
     <h1 class="text-center logo my-4">
-      <a href="{% url 'home' %}">Green CovR</a>
+        <img class="left" src="{% static 'img/mosh_logo.png' %}"/>
+        <img class="right" src="{% static 'img/vertMrnM.gif' %}"/>
     </h1>
+    <h1 class="text-center logo my-4">
+        <a href="{% url 'home' %}">Green CovR</a>
+    </h1>    
     {% block content %}
     {% endblock %}
   </div>
