--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -25,7 +25,7 @@
         <div class="card-body">
           <h3 class="card-title">Upload a photo</h3>
             <p>
-            Thank you for submitting a cover crop ground cover photo to the MN Office for Soil Health (MOSH, <a href="mosh.umn.edu">mosh.umn.edu</a>) Green CovR database. 
+            Thank you for submitting a cover crop ground cover photo to the MN Office for Soil Health (<a href="mosh.umn.edu">MOSH</a>) Green CovR database. 
             The app was developed in the Wilson Lab for manure management and water quality.
             MOSH will use this data anonymously to evaluate how successful cover crops are when planted in different contexts.
             Please give us as much information as possible about the field where photos are taken in order to interpret the data correctly.
