--- a/kanopy/templates/kanopy/kanopy_table.html
+++ b/kanopy/templates/kanopy/kanopy_table.html
@@ -11,7 +11,7 @@
       <div class="card">
         <div class="card-body">
           <h3 class="card-title">Uploaded</h3>
-            <div class="col-lg-8">
+            <div class="col-md-10">
                 {% render_table table %}
             </div>
         </div>
