--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -70,7 +70,7 @@
                 {% csrf_token %}
                 <div class="form-row">
                     <div class="form-group col-md-4 mb-0">
-                        {{ form.locname|as_crispy_field }}
+                        {{ form.location_name|as_crispy_field }}
                     </div>
                 </div>
                 <div class="form-row">
