added download all capability

--- a/kanopy/templates/kanopy/kanopy_table.html
+++ b/kanopy/templates/kanopy/kanopy_table.html
@@ -11,6 +11,7 @@
       <div class="card">
         <div class="card-body">
           <h3 class="card-title">Uploaded</h3>
+          <h5 class="card-title"><a href="{% url 'kanopy_download' %}">Download all data</a></h5>
             <div class="col-md-10">
                 {% render_table table %}
             </div>
