--- a/kanopy/templates/kanopy/model_form_upload.html
+++ b/kanopy/templates/kanopy/model_form_upload.html
@@ -68,85 +68,9 @@
             </p>
             <form method="post" enctype="multipart/form-data">
                 {% csrf_token %}
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.location_name|as_crispy_field }}
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.collectionpoint|as_crispy_field }}
-                    </div>
-                </div>                
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">    
-                        {{ form.cover_crop_species_1|as_crispy_field }}
-                    </div>
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">    
-                        {{ form.cover_crop_species_2|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-4 mb-0">    
-                        {{ form.cover_crop_species_3|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-4 mb-0">    
-                        {{ form.cover_crop_species_4|as_crispy_field }}
-                    </div>                    
-                </div>                    
-                </div>                
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">    
-                        {{ form.cover_crop_planting_date|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-4 mb-0">    
-                        {{ form.cover_crop_planting_rate|as_crispy_field }}
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.seeding_method|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-6 mb-0">
-                        {{ form.cover_crop_interseeded|as_crispy_field }}
-                    </div>
-                </div>   
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.cover_crop_termination_date|as_crispy_field }}                        
-                    </div>                    
-                </div>                   
-                <div class="form-row">
-
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.crop_prior|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.crop_posterior|as_crispy_field }}
-                    </div>
-                </div>    
                 
-                <div class="form-row">
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.image|as_crispy_field }}
-                    </div>
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.photo_taken_date|as_crispy_field }}    
-                    </div>                                        
-                    <div class="form-group col-md-4 mb-0">
-                        {{ form.fgcc_value|as_crispy_field }}    
-                    </div>                    
-                </div>    
-
-                <div class="form-row">
-                    <div class="form-group col-md-8 mb-0">
-                        {{ form.comments|as_crispy_field }}
-                    </div>
-                </div>                
-                <div class="form-row">
-                    <div class="form-group col-md-8 mb-0">
-                        {{ form.contact_email|as_crispy_field }}
-                    </div>
-                </div>                                
+                {% include 'kanopy/includes/form.html' %}                     
+                
                 <button type="submit" class="btn btn-primary">Upload</button>
 
                 
