added map for viewing submissions

--- a/kanopy/templates/kanopy/base_kanopy.html
+++ b/kanopy/templates/kanopy/base_kanopy.html
@@ -13,7 +13,7 @@
         <img class="right logoimg" src="{% static 'img/vertMrnM.gif' %}"/>
     </h1>
     <h1 class="text-center logo my-4">
-        <a href="{% url 'home' %}">Green CovR</a>
+        <a href="{% url 'kanopy_upload' %}">Green CovR</a>
     </h1>    
     {% block content %}
     {% endblock %}
